introduce ShareWidget::addCopyableLink() that automatically copies the link to the clipboard (incl confirmation animation afterwards), fixes #7825

--- a/public/assets/stylesheets/style.less
+++ b/public/assets/stylesheets/style.less
@@ -40,6 +40,7 @@
 @import "less/tabs.less";
 @import "less/tooltip.less";
 @import "less/questionnaire.less";
+@import "less/copyable-links.less";
 
 @import "less/admin.less";
 @import "less/calendar.less";
