--- a/public/assets/stylesheets/less/copyable-links.less
+++ b/public/assets/stylesheets/less/copyable-links.less
@@ -1,21 +1,38 @@
-.keyframes(@name, @rules) {
+// Defines a css animation keyframes specific for this section with stop points
+// at 1/3 and 2/3. This way, the animation runs for a third of the allocated
+// time, shows the desired state for a third of the time and reverts for - you
+// guessed it - a third of the time.
+.keyframes(@name, @rules-inital, @rules-target) {
     @-webkit-keyframes @name {
-        @rules();
+        0%   { @rules-inital(); }
+        33%  { @rules-target(); }
+        66%  { @rules-target(); }
+        100% { @rules-inital(); }
     }
 
     @-moz-keyframes @name {
-        @rules();
+        0%   { @rules-inital(); }
+        33%  { @rules-target(); }
+        66%  { @rules-target(); }
+        100% { @rules-inital(); }
     }
 
     @-o-keyframes @name {
-        @rules();
+        0%   { @rules-inital(); }
+        33%  { @rules-target(); }
+        66%  { @rules-target(); }
+        100% { @rules-inital(); }
     }
 
     @keyframes @name {
-        @rules();
+        0%   { @rules-inital(); }
+        33%  { @rules-target(); }
+        66%  { @rules-target(); }
+        100% { @rules-inital(); }
     }
 }
 
+// Defines an css animation with vendor prefixes
 .animation(@arguments) {
     -webkit-animation: @arguments;
     -moz-animation: @arguments;
@@ -24,37 +41,10 @@
 
 .copyable-link-animation {
     @animation-name: copyable-links-confirmation;
-    @animation-duration: 1s;
+    @animation-duration: 1.5s;
 
+    // Position confirmation message above the link
     position: relative;
-
-    a,
-    div {
-        backface-visibility: hidden;
-        pointer-events: none;
-    }
-
-    a {
-        .keyframes("@{animation-name}-front", {
-            0% {
-                opacity: 1;
-                transform: rotateX(0);
-            }
-            25% {
-                opacity: 0;
-                transform: rotateX(180deg);
-            }
-            75% {
-                opacity: 0;
-                transform: rotateX(180deg);
-            }
-            100% {
-                transform: rotateX(0);
-                opacity: 1;
-            }
-        });
-        .animation("@{animation-name}-front" @animation-duration linear);
-    }
 
     div {
         position: absolute;
@@ -66,25 +56,45 @@
         text-align: center;
 
         .icon('before', 'check-circle', 'status-green', 16px, 5px);
+    }
 
-        .keyframes("@{animation-name}-back", {
-            0% {
-                opacity: 0;
-                transform: rotateX(180deg);
-            }
-            25% {
+    // Hide the link if no animations are available
+    html.no-cssanimations & {
+        a {
+            visibility: hidden;
+        }
+    }
+
+    // Flip the link and confirmation message along the x axis when animations
+    // are available
+    html.cssanimations & {
+        a,
+        div {
+            backface-visibility: hidden;
+            pointer-events: none;
+        }
+
+        a {
+            .keyframes("@{animation-name}-front", {
                 opacity: 1;
                 transform: rotateX(0);
-            }
-            75% {
-                opacity: 1;
-                transform: rotateX(0);
-            }
-            100% {
+            }, {
+               opacity: 0;
+                transform: rotateX(180deg);
+            });
+            .animation("@{animation-name}-front" @animation-duration linear);
+        }
+
+        div {
+            .keyframes("@{animation-name}-back", {
                 opacity: 0;
                 transform: rotateX(180deg);
-            }
-        });
-        .animation("@{animation-name}-back" @animation-duration linear);
+            }, {
+                opacity: 1;
+                transform: rotateX(0);
+            });
+            .animation("@{animation-name}-back" @animation-duration linear);
+        }
+
     }
 }
