prevent quotes around animation name, re #7825

--- a/public/assets/stylesheets/less/copyable-links.less
+++ b/public/assets/stylesheets/less/copyable-links.less
@@ -75,25 +75,25 @@
         }
 
         a {
-            .keyframes("@{animation-name}-front", {
+            .keyframes(~"@{animation-name}-front", {
                 opacity: 1;
                 transform: rotateX(0);
             }, {
                opacity: 0;
                 transform: rotateX(180deg);
             });
-            .animation("@{animation-name}-front" @animation-duration linear);
+            .animation(~"@{animation-name}-front" @animation-duration linear);
         }
 
         div {
-            .keyframes("@{animation-name}-back", {
+            .keyframes(~"@{animation-name}-back", {
                 opacity: 0;
                 transform: rotateX(180deg);
             }, {
                 opacity: 1;
                 transform: rotateX(0);
             });
-            .animation("@{animation-name}-back" @animation-duration linear);
+            .animation(~"@{animation-name}-back" @animation-duration linear);
         }
 
     }
