--- a/public/assets/stylesheets/less/profile.less
+++ b/public/assets/stylesheets/less/profile.less
@@ -87,15 +87,11 @@ form.settings-avatar {
             display: block;
             white-space: nowrap;
 
-            &:first-child {
-                padding-top: 2em;
-            }
-
             &:last-child {
-                padding-top: .5em;
+                padding-right: .5em;
             }
 
-            &:before {
+            &::before {
                 content: attr(data-label);
                 font-weight: bold;
                 width: 6.5em;
@@ -115,7 +111,7 @@ form.settings-avatar {
 
 .media-breakpoint-small-up({
     #select_fach_abschluss tbody {
-        td:before {
+        td::before {
             display: none;
         }
 
@@ -123,10 +119,12 @@ form.settings-avatar {
             display: table-cell;
             padding: .25em .5em;
         }
-        th:first-child, td:first-child {
+        th:first-child,
+        td:first-child {
             padding-left: 0;
         }
-        th:last-child, td:last-child {
+        th:last-child,
+        td:last-child {
             padding-right: 0;
         }
 
