enforce no border-radius on all button elements due to bug in chrome on mac, re #7863

--- a/public/assets/stylesheets/less/buttons.less
+++ b/public/assets/stylesheets/less/buttons.less
@@ -1,6 +1,7 @@
 .button() {
     background: white;
     border: 1px solid @base-color;
+    border-radius: 0;
     .box-sizing(border-box);
     color: @base-color;
     cursor: pointer;
