use correct snakecase style on trunk as well, re #7363

--- a/public/assets/stylesheets/less/quicksearch.less
+++ b/public/assets/stylesheets/less/quicksearch.less
@@ -74,7 +74,7 @@ input.quicksearchbox {
     z-index: 99999;
 }
 
-.QuickSearchSelect {
+.quicksearch_select {
     width: calc(100% - 32px);
 
     + input[type=submit] {
