--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -4,24 +4,24 @@
 *******************************************************************************/
 @font-face {
   font-family: 'Lato';
-  src: url('../fonts/lato/latolatinlight-regular-webfont.eot');
-  src: url('../fonts/lato/latolatinlight-regular-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/lato/latolatinlight-regular-webfont.woff') format('woff'), url('../fonts/lato/latolatinlight-regular-webfont.ttf') format('truetype'), url('../fonts/lato/latolatinlight-regular-webfont.svg#lato_latin_lightregular') format('svg');
+  src: url('../fonts/lato/lato-light.eot');
+  src: url('../fonts/lato/lato-light.eot?#iefix') format('embedded-opentype'), url('../fonts/lato/lato-light.woff') format('woff'), url('../fonts/lato/lato-light.ttf') format('truetype');
   font-style: normal;
   font-weight: 300;
-  text-rendering: optimizeLegibility;
+  text-rendering: optimizelegibility;
 }
 @font-face {
   font-family: 'Lato';
-  src: url('../fonts/lato/latolatin-regular-webfont.eot');
-  src: url('../fonts/lato/latolatin-regular-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/lato/latolatin-regular-webfont.woff') format('woff'), url('../fonts/lato/latolatin-regular-webfont.ttf') format('truetype'), url('../fonts/lato/latolatin-regular-webfont.svg#lato_latinregular') format('svg');
+  src: url('../fonts/lato/lato-regular.eot');
+  src: url('../fonts/lato/lato-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/lato/lato-regular.woff') format('woff'), url('../fonts/lato/lato-regular.ttf') format('truetype');
   font-style: normal;
   font-weight: 400;
-  text-rendering: optimizeLegibility;
+  text-rendering: optimizelegibility;
 }
 @font-face {
   font-family: 'Lato';
-  src: url('../fonts/lato/latolatin-bold-webfont.eot');
-  src: url('../fonts/lato/latolatin-bold-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/lato/latolatin-bold-webfont.woff') format('woff'), url('../fonts/lato/latolatin-bold-webfont.ttf') format('truetype'), url('../fonts/lato/latolatin-bold-webfont.svg#lato_latinbold') format('svg');
+  src: url('../fonts/lato/lato-bold.eot');
+  src: url('../fonts/lato/lato-bold.eot?#iefix') format('embedded-opentype'), url('../fonts/lato/lato-bold.woff') format('woff'), url('../fonts/lato/lato-bold.ttf') format('truetype');
   font-style: normal;
   font-weight: 700;
   text-rendering: optimizeLegibility;
