--- a/public/assets/stylesheets/less/questionnaire.less
+++ b/public/assets/stylesheets/less/questionnaire.less
@@ -112,3 +112,39 @@
     color: @light-gray-color;
     margin: 0 -10px;
 }
+
+#qr_code {
+    display: none;
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    .code > div {
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+    }
+}
+#qr_code:-moz-full-screen {
+    display: flex;
+}
+#qr_code:-webkit-full-screen {
+    display: flex;
+}
+#qr_code:-ms-fullscreen {
+    display: flex;
+}
+#qr_code:fullscreen {
+    display: flex;
+}
+
+#qr_code .code img {
+    width: 70vh;
+    height: 70vh;
+}
+
+a[data-qr-code] .qrcode_image {
+    display: none;
+}
