remove flex-header containing logo in responsive display, re #7897

--- a/public/assets/stylesheets/less/responsive.less
+++ b/public/assets/stylesheets/less/responsive.less
@@ -160,7 +160,8 @@ label[for="responsive-toggle"] {
 });
 
 .media-breakpoint-small-down({
-    #header, #barTopFont, #barTopMenu, #barBottomLeft .current_page, #barBottommiddle, #barBottomLeft, #barBottomArrow,
+    #header, #flex-header, #barTopFont, #barTopMenu,
+    #barBottomLeft .current_page, #barBottommiddle, #barBottomLeft, #barBottomArrow,
     #tabs, #tabs2, .sidebar-image, #sidebar-navigation, #barTopFont, #footer {
         display: none !important;
     }
