--- a/public/assets/stylesheets/less/personal-notifications.less
+++ b/public/assets/stylesheets/less/personal-notifications.less
@@ -195,6 +195,7 @@
         // Create blind effect to hide/display this links smoothly
         .transition(all 300ms);
         max-height: 31px;
+        overflow: hidden;
 
         &.hidden {
             border-bottom-width: 0;
