--- a/public/assets/stylesheets/less/dates.less
+++ b/public/assets/stylesheets/less/dates.less
@@ -1,24 +1,39 @@
-.themen_list, .dozenten_list {
+.dozenten-list {
     margin: 0px;
     padding: 0px;
     list-style-type: none;
 }
-.themen_list > * {
-    background-color: @content-color-20;
-    margin: 2px;
+
+.themen-list-container {
+    .flex();
+    .flex-direction-row();
+
+    > * {
+        .flex-item(1);
+    }
+    > a {
+        .flex-item(0);
+        .flex-align-self(flex-end);
+    }
 }
+
 table.dates {
     width: calc(100% - 4px);
     .themen_list > * {
         background-color: transparent;
     }
-    .ausfall {
+    tr.ausfall {
+        .transition(opacity 300ms);
         opacity: 0.5;
+
+        &:hover {
+            opacity: 1;
+        }
     }
     .nextdate {
         background-color: @content-color-40;
     }
-    
+
     .topic-droppable {
         &.active {
             background-color: @activity-color-40;
@@ -31,5 +46,10 @@ table.dates {
         cursor: move;
         background: transparent url("@{image-path}/anfasser_24.png") 3px center no-repeat;
         padding-left: 12px;
+    }
+    .ui-draggable-dragging {
+        img.icon-shape-trash {
+            display: none;
+        }
     }
 }
