--- a/public/assets/stylesheets/style.less
+++ b/public/assets/stylesheets/style.less
@@ -79,6 +79,8 @@
 @import "less/big-image-handler.less";
 @import "less/i18n.less";
 
+@import "less/globalsearch.less";
+
 @import "less/responsive.less";
 @import "less/navigation-hoverborder.less";
 
