GlobalSearchModule -> abstract class instead of interface, code for searching via mysqli, re #7893

--- a/public/assets/stylesheets/less/globalsearch.less
+++ b/public/assets/stylesheets/less/globalsearch.less
@@ -48,6 +48,22 @@ div#globalsearch-searchbar {
         font-size: 12px;
       }
     }
+
+    div#globalsearch-results {
+      border-top: 1px solid @light-gray-color-60;
+      padding-top: 10px;
+
+      div#globalsearch-loading-text {
+        text-align: center;
+        font-style: italic;
+        color: @dark-gray-color-80;
+      }
+
+      #globalsearch-loading-icon {
+        height: 32px;
+        width: 32px;
+      }
+    }
   }
 
 }
