Sets a maximum height for the dialog, fixes #7286

--- a/public/assets/stylesheets/less/dialog.less
+++ b/public/assets/stylesheets/less/dialog.less
@@ -160,6 +160,7 @@
         font-weight: bold;
         padding: 15px 15px 15px 55px;
         text-align: left;
+        max-height: 60vh;
     }
 
     .ui-dialog-buttonpane {
