provide compiled css, fixes #7286

--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -8799,6 +8799,7 @@ table.default tr.subcourses td:nth-child(-n+4) {
   font-weight: bold;
   padding: 15px 15px 15px 55px;
   text-align: left;
+  max-height: 60vh;
 }
 .ui-dialog.studip-confirmation .ui-dialog-buttonpane {
   text-align: center;
