--- a/public/assets/stylesheets/less/i18n.less
+++ b/public/assets/stylesheets/less/i18n.less
@@ -34,7 +34,7 @@ div.i18n_group {
     }
 
     > div.i18n {
-        > input[type=text], > textarea, .editor_toolbar .buttons, .cktoolbar .cke_inner {
+        input[type=text], > textarea, .editor_toolbar .buttons, .cktoolbar .cke_inner {
             padding-left: (@max-width + 6px) !important;
         }
     }
