--- a/public/assets/stylesheets/less/globalsearch.less
+++ b/public/assets/stylesheets/less/globalsearch.less
@@ -14,7 +14,7 @@ div#globalsearch-searchbar {
   div#globalsearch-list {
     transform-origin: 100% 50%;
     background-color: @white;
-    width: 353px;
+    width: 423px;
     position: absolute;
     color: @text-color;
     padding: 5px;
@@ -62,6 +62,68 @@ div#globalsearch-searchbar {
       #globalsearch-loading-icon {
         height: 32px;
         width: 32px;
+      }
+
+      article {
+        border: 1px solid @content-color-40;
+        margin: 3px;
+
+        > header {
+          background-color: @content-color-20;
+          color: @base-color;
+          padding: 3px;
+          font-weight: bold;
+        }
+
+        section {
+          display: flex;
+          flex-direction: row;
+          flex-wrap: nowrap;
+          padding-top: 3px;
+          padding-bottom: 3px;
+
+          &:not(:last-child) {
+            border-bottom: 1px solid @content-color-40;
+          }
+
+          &:hover {
+            background-color: fadeout(@light-gray-color, 80%);
+          }
+
+          div.globalsearch-result-img {
+            height: 50px;
+            margin-left: 6px;
+            width: 50px;
+          }
+
+          div.globalsearch-result-data {
+            padding-left: 6px;
+            padding-right: 6px;
+
+            div.globalsearch-result-link {
+              font-weight: bold;
+
+              a {
+                margin: 0;
+              }
+            }
+
+            div.globalsearch-result-details {
+              color: @dark-gray-color-80;
+              font-size: @font-size-small;
+            }
+          }
+
+          div.globalsearch-result-time {
+            color: @dark-gray-color-80;
+            font-size: ceil(@font-size-small * 0.85);
+            font-weight: normal;
+            font-style: italic;
+            margin-right: 6px;
+            text-align: right;
+            width: 100px;
+          }
+        }
       }
     }
   }
