optische Anpassung der Bullets in Aufzählungslisten im WYSIWYG-Editor und dem Ankündigungswidget auf der Startseite, fixes #6953

--- a/public/assets/stylesheets/less/lists.less
+++ b/public/assets/stylesheets/less/lists.less
@@ -54,3 +54,14 @@ dl {
       font-weight: bold;
   }
 }
+
+// reset the visualization of different levels of unordered lists
+.formatted-content ul {
+  list-style-type: disc;
+  ul {
+    list-style-type: circle;
+    ul {
+      list-style-type: square;
+    }
+  }
+}
