--- a/public/assets/stylesheets/less/globalsearch.less
+++ b/public/assets/stylesheets/less/globalsearch.less
@@ -51,6 +51,7 @@ div#globalsearch-searchbar {
 
     div#globalsearch-results {
       border-top: 1px solid @light-gray-color-60;
+      overflow: scroll;
       padding-top: 10px;
 
       div#globalsearch-loading-text {
@@ -91,9 +92,10 @@ div#globalsearch-searchbar {
           }
 
           div.globalsearch-result-img {
-            height: 50px;
+            height: 36px;
             margin-left: 6px;
-            width: 50px;
+            margin-right: 6px;
+            width: 36px;
           }
 
           div.globalsearch-result-data {
