--- a/public/assets/stylesheets/less/globalsearch.less
+++ b/public/assets/stylesheets/less/globalsearch.less
@@ -73,8 +73,23 @@ div#globalsearch-searchbar {
         > header {
           background-color: @content-color-20;
           color: @base-color;
-          padding: 3px;
+          display: flex;
+          flex-direction: row;
+          flex-wrap: nowrap;
           font-weight: bold;
+          padding: 3px;
+
+          div.globalsearch-category {
+            flex: auto;
+          }
+
+          div.globalsearch-more-results {
+            flex: none;
+            font-size: @font-size-small;
+            font-weight: normal;
+            text-align: right;
+            width: 100px;
+          }
         }
 
         section {
