implement file search, re #7893

--- a/public/assets/stylesheets/less/globalsearch.less
+++ b/public/assets/stylesheets/less/globalsearch.less
@@ -122,6 +122,7 @@ div#globalsearch-searchbar {
 
           div.globalsearch-result-data {
             flex: auto;
+            overflow: hidden;
             padding-left: 6px;
             padding-right: 6px;
 
