width finetuning, re #7893

--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -10082,6 +10082,9 @@ div.i18n_group > div.i18n .cktoolbar .cke_inner {
 div#globalsearch-searchbar {
   position. relative;
 }
+div#globalsearch-searchbar input#globalsearch-input {
+  width: 215px;
+}
 div#globalsearch-searchbar #globalsearch-list {
   background-color: #fff;
   box-shadow: 0px 5px 8px rgba(0,0,0,0.5);
