--- a/public/assets/stylesheets/less/globalsearch.less
+++ b/public/assets/stylesheets/less/globalsearch.less
@@ -2,6 +2,10 @@ div#globalsearch-searchbar {
 
   position: relative;
 
+  input#globalsearch-input {
+    width: 423px;
+  }
+
   div#globalsearch-list {
     background-color: @white;
     box-shadow: 0px 5px 8px rgba(0,0,0,0.5);
@@ -11,7 +15,7 @@ div#globalsearch-searchbar {
     overflow: auto;
     padding: 5px;
     position: absolute;
-    width: 423px;
+    width: 215px;
 
     a {
       color: @base-color;
