--- a/public/assets/stylesheets/less/globalsearch.less
+++ b/public/assets/stylesheets/less/globalsearch.less
@@ -2,6 +2,19 @@ div#globalsearch-searchbar {
 
   position: relative;
 
+  #globalsearch-clear {
+    height: 16px;
+    left: -22px;
+    position: relative;
+    top: 3px;
+    width: 16px;
+  }
+
+  a#globalsearch-icon {
+    position: relative;
+    top: 6px;
+  }
+
   input#globalsearch-input {
     width: 423px;
   }
@@ -12,7 +25,7 @@ div#globalsearch-searchbar {
     color: @text-color;
     font-size: 18px;
     font-weight: normal;
-    overflow: auto;
+    overflow: hidden;
     padding: 5px;
     position: absolute;
     width: 215px;
@@ -144,6 +157,13 @@ div#globalsearch-searchbar {
             margin-right: 6px;
             text-align: right;
             width: 60px;
+          }
+
+          div.globalsearch-result-expand {
+            flex: none;
+            margin-bottom: auto;
+            margin-top: auto;
+            width: 20px;
           }
         }
       }
