extended display of one category in search results, re #7893

--- a/public/assets/stylesheets/less/globalsearch.less
+++ b/public/assets/stylesheets/less/globalsearch.less
@@ -119,6 +119,10 @@ div#globalsearch-searchbar {
             background-color: fadeout(@light-gray-color, 80%);
           }
 
+          &.globalsearch-extended-result {
+            display: none;
+          }
+
           div.globalsearch-result-img {
             flex: none;
             height: 36px;
